text/static/text/css/text.css
span {
    display: inline-block;
}

.text {
    display: grid;
    grid-column: 2;

    font-family: "Lora,Palatino,Times,Times New Roman,serif";
    font-size: 16px;
    line-height: 1.6;
    letter-spacing: 0;

    grid-template-columns: 10% auto 10%;
}

.text_section {
    grid-column: 2;
    padding-top: 25px;
    margin-bottom: 15px;

    font-family: "Lora,Palatino,Times,Times New Roman,serif";
    font-size: 19px;
    line-height: 1.6;
    letter-spacing: 0;
}

.nav {
    grid-column: 2;
    display: grid;
    grid-template-columns: 50% 50%;
}

.exception {
    grid-column: 2;
    display: grid;
    font-size: 20px;
    font-style: italic;
    color: #bf2639;
}

.nav > div {
    display: inline-block;

    cursor: pointer;

    margin: 15px;

    background: #f9f9f9;
    text-align: center;

    padding: 2px;
    border: solid 1px white;
    border-radius: 5px;
}

.start_btn {
    grid-column: 1 / 3;
}

#startover {
}

#goback {
}

#text_score {
    display: grid;
    grid-column: 2;

    margin: 50px 15px 15px 15px;
}

#text_intro {
    grid-column: 2;
    display: grid;

    align-items: center;
    justify-items: center;
}

#text_conclusion {
    grid-column: 2;
    display: grid;

    align-items: center;
    justify-items: center;
}

.text_body {
    grid-column: 2;

    align-items: center;
    justify-items: center;

    padding-top: 25px;
    padding-bottom: 25px;
}

.section_title {
    font-size: 20px;
}

.questions {
    display: grid;
    padding-top: 15px;

    border-top: rgb(238, 238, 238) solid 1px;

    grid-column: 2;
    grid-template-columns: auto;
    grid-row-gap: 50px;
    row-gap: 50px;
}

.question {
    display: grid;
    grid-template-columns: auto;
}

.question_body {
    font-size: 18px;
    margin-bottom: 30px;
}

.answers {
}

.answer_selected {
    background: #FFFFFF !important;
}

.correct {
    border-color: #07e200 !important;
}

.incorrect {
    border-color: #fc3605 !important;
}

.answer {
    background: #f9f9f9;
    margin-bottom: 15px;
    padding: 10px;

    border: solid 1px lightgrey;
    border-radius: 5px;
    font-size: 17px;
    cursor: pointer;
}

.answer_feedback {
    margin-top: 10px;
}

.answer_text {
    font-size: 18px;
}

.bolder {
    font-weight: bolder;
}

.gloss_menu {
    position: relative;
}

.highlighted {
    background: yellow;
}

.translations {
    padding-top: 10px;
    border-top: solid 0.5px lightgrey;
}

.gloss_flashcard_options {
    display: grid;

    margin-top: 10px;

    border-top: solid 0.5px lightgrey;

    grid-template-columns: auto auto;
}

.gloss_flashcard_options > div:nth-child(1) {
    margin-top: 5px;
    grid-column: 1 / 3;
}

.gloss_overlay {
    display: grid;
    position: absolute;

    grid-template-columns: auto;
    grid-template-rows: auto auto auto;

    margin-top: 5px;

    z-index: 2;
    max-width: 200px;

    background: #FFFFFF;

    font-family: proxima-nova, proxima-nova-1, proxima-nova-2, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;

    padding: 5px;

    border: solid 0.5px lightgrey;
    border-radius: 2px;
    box-shadow: 0 1px 16px rgba(0,0,0,.1);
}

@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
    .header {
        display: flex;
    }

    .menu {
        display: flex;
        flex-wrap: wrap;

        align-items: center;
        justify-items: center;
    }

    .filter {
        display: none;
    }

}

